# FFMPEGTest

./: CMakeLists.txt  README.md  jpeg_encoder.cpp  jpeg_encoder.h  main.cpp  memory_logger.cpp  memory_logger.h  video_processor.cpp  video_processor.h
